--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "Bringing new tools to your document workflow.",
   "dependencies": {
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.23.0",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
     "@types/validator": "^13.12.3",
     "dotenv-safe": "^9.1.0",
