--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "Bringing new tools to your document workflow.",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.14.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
