--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "singleQuote": true,
   "semi": true,
   "tabWidth": 4,
-  "useTabs": true,
+  "useTabs": false,
   "trailingComma": "all",
   "printWidth": 100,
   "bracketSpacing": true,
