--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   "description": "Bringing new tools to your document workflow.",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "express": "^4.21.2",
+    "jscanify": "^1.4.0",
     "multer": "^1.4.5-lts.2",
+    "pdf-to-img": "^3.0.0",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "sharp": "^0.34.1",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
