--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "license": "ISC",
   "description": "Bringing new tools to your document workflow.",
   "dependencies": {
+    "@google-cloud/vision": "^5.1.0",
+    "@techstark/opencv-js": "^4.10.0-release.1",
     "bcrypt": "^5.1.1",
     "canvas": "^3.1.0",
     "express": "^4.21.2",
     "jscanify": "^1.4.0",
+    "long": "^5.3.2",
     "multer": "^1.4.5-lts.2",
+    "nodejs-file-downloader": "^4.13.0",
+    "onnxruntime-node": "^1.21.0",
+    "openai": "^4.96.0",
     "pdf-to-img": "^4.4.0",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
@@ -33,6 +39,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^5.0.1",
+    "@types/long": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
     "@types/validator": "^13.12.3",
