Google credentials fix

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-PORT=5000
-DATABASE_URL=postgresql://LOCAL_USERNAME:LOCAL_PASSWORD@localhost:PORT/si-docflow
+PORT=
+DATABASE_URL=
+GOOGLE_CREDENTIALS_BASE64=
+OPENAI_API_KEY=
+AI_MODEL_NAME=
+AI_MODEL_DOWNLOAD_URL=
