--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=
 DATABASE_URL=
 GOOGLE_CREDENTIALS_BASE64=
+GOOGLE_APPLICATION_CREDENTIALS=
 OPENAI_API_KEY=
 AI_MODEL_NAME=
 AI_MODEL_DOWNLOAD_URL=
