--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "bootstrap": "node dist/config/env.js && node dist/config/bootstrap.js",
+    "start": "npm run bootstrap && node dist/server.js",
     "dev": "npm run build && npm run start"
   },
   "keywords": [],
