Public .env variables

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-PORT=
+PORT=5000
 DATABASE_URL=
 GOOGLE_CREDENTIALS_BASE64=
-GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_APPLICATION_CREDENTIALS=./google-credentials.json
 OPENAI_API_KEY=
-AI_MODEL_NAME=
-AI_MODEL_DOWNLOAD_URL=
+AI_MODEL_NAME=lcnet100_h_e_bifpn_256_fp32.onnx
+AI_MODEL_DOWNLOAD_URL=https://drive.usercontent.google.com/download?id=1IlbLPkCv-TdaBLOPh_4J97P1_KHYYJ7a&export=download&authuser=0
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_API_KEY=
