--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "build": "tsc",
     "bootstrap": "node dist/config/env.js && node dist/config/bootstrap.js",
-    "start": "npm run bootstrap && node dist/server.js",
-    "dev": "npm run build && npm run start"
+    "serve": "node dist/server.js",
+    "start": "npm run bootstrap && npm run serve",
+    "dev": "npm run build && npm run start",
+    "seed": "node dist/config/seed.js"
   },
   "keywords": [],
   "author": "docflow",
