--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 PORT=5000
-DATABASE_URL=
-GOOGLE_CREDENTIALS_BASE64=
+DATABASE_URL=postgresql://USERNAME:PASSWORD@HOST:PORT/DATABASE_NAME
+GOOGLE_CREDENTIALS_BASE64=your_google_credentials
 GOOGLE_APPLICATION_CREDENTIALS=./google-credentials.json
-OPENAI_API_KEY=
+OPENAI_API_KEY=your_openai_api_key
 AI_MODEL_NAME=lcnet100_h_e_bifpn_256_fp32.onnx
 AI_MODEL_DOWNLOAD_URL=https://drive.usercontent.google.com/download?id=1IlbLPkCv-TdaBLOPh_4J97P1_KHYYJ7a&export=download&authuser=0
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_API_KEY=
+SUPABASE_URL=https://PROJECT_ID.supabase.co
+SUPABASE_KEY=your_supabase_key
